--- a/index.html
+++ b/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pokedex</title>
 
-  <!-- Links -->
   <link rel="icon" href="./favicons/favicon-16x16.png">
   <link rel="stylesheet" href="./css/style.css">
-
-  <!-- Main JS -->
-  <script defer src="./js/script.js"></script>
-
-  <title>Pokédex</title>
 </head>
 <body>
-  
   <main>
-    <img src="#" alt="pokemon" class="pokemon__image">
-
-    <h1 class="pokemon__data">
-      <span class="pokemon__number"></span> -
-      <span class="pokemon__name"></span>
+    <img 
+      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif"
+      alt="pokemon" 
+      class="pokemon_image"
+    >
+    <h1 class="pokemon_data">
+      <span class="pokemon_number">
+        6
+      </span>
+      -
+      <span class="pokemon_name">
+        charizard
+      </span>
     </h1>
 
     <form class="form">
-      <input
+      <input 
         type="search"
-        class="input__search"
-        placeholder="Name or Number"
+        class="input_search"
+        placeholder="Nome ou número"
         required
       />
     </form>
 
-    <div class="buttons">
-      <button class="button btn-prev">Prev &lt;</button>
-      <button class="button btn-next">Next &gt;</button>
-    </div>
-
-    <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
+    <img src="./images/pokedex.png" alt="pokedex-image" class="pokedex">
   </main>
-
 </body>
 </html>
