Feature all page styles

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       />
     </form>
 
+    <div class="buttons">
+      <button class="button btn-prev" id="previous">&lt; Anterior</button>
+      <button class="button btn-next" id="next">Próximo &gt;</button>
+    </div>
+
     <img src="./images/pokedex.png" alt="pokedex-image" class="pokedex">
   </main>
 </body>
