Feature working pokedex

--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 
   <link rel="icon" href="./favicons/favicon-16x16.png">
   <link rel="stylesheet" href="./css/style.css">
+
+  <script src="js/script.js"></script>
 </head>
 <body>
   <main>
     <img 
-      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif"
+      src="#"
       alt="pokemon" 
       class="pokemon_image"
     >
     <h1 class="pokemon_data">
       <span class="pokemon_number">
-        6
+        
       </span>
       -
       <span class="pokemon_name">
-        charizard
+        
       </span>
     </h1>
 
@@ -35,8 +37,8 @@
     </form>
 
     <div class="buttons">
-      <button class="button btn-prev" id="previous">&lt; Anterior</button>
-      <button class="button btn-next" id="next">Próximo &gt;</button>
+      <button class="button btn-prev">&lt; Anterior</button>
+      <button class="button btn-next">Próximo &gt;</button>
     </div>
 
     <img src="./images/pokedex.png" alt="pokedex-image" class="pokedex">
